# mixtures

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  Dockerfile  Pipfile  Procfile  README.md  compile-messages.ps1  fly.toml  make-messages.ps1  manage.py  pyproject.toml  release.sh  requirements.txt  run-server.ps1  sass-compile.ps1
.github/: FUNDING.yml
.github/workflows/: flyio.yml  pages.yml
blog/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0003_alter_article_created_and_more.py  0002_alter_article_author.py
drugcombinator/: admin.py  apps.py  converters.py  exceptions.py  fields.py  forms.py  managers.py  modelfields.py  models.py  signals.py  sitemaps.py  tasks.py  tests.py  translation.py  urls.py  utils.py  views.py
drugcombinator/api/: tests.py  urls.py  utils.py  views.py
drugcombinator/business/: wayback.py
drugcombinator/migrations/: 0001_initial.py  0002_auto_20200325_2331.py  0003_auto_20200326_0012.py  0004_auto_20200326_0125.py  0005_auto_20200327_0205.py  0006_auto_20200330_2142.py  0007_auto_20200331_0023.py  0008_auto_20200406_0133.py  0009_auto_20200410_2343.py  0010_auto_20200424_1907.py  0011_auto_20200424_1909.py  0012_auto_20200424_1919.py  0013_auto_20200425_0034.py  0014_interaction_is_draft.py  0015_auto_20200425_0130.py  0016_note.py  0017_auto_20200426_0201.py  0018_drug_risks.py  0019_auto_20200501_2353.py  0020_auto_20200502_0112.py  0021_remove_interaction_sym_id.py  0022_auto_20200504_1714.py  0023_auto_20200504_1835.py  0024_auto_20200506_1318.py  0025_auto_20200506_1325.py  0026_auto_20200509_2003.py  0027_auto_20200509_2358.py  0028_auto_20200511_1518.py  0029_auto_20200511_1521.py  0030_historicaldrug_historicalinteraction.py  (+13 more)
drugportals/: admin.py  apps.py  middleware.py  models.py  sitemaps.py  translation.py  urls.py  views.py
mixtures/: hosts.py  settings.py  settings_deploy.py  sitemaps.py  urls.py  wsgi.py
templates/: 404.html
utils/: __init__.py  i18n.py  serializers.py  sitemaps.py  urls.py
(+109 files in other folders)
