[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mixtures"
requires-python = ">=3.10"
dependencies = [
    "django~=4.1.10",
    "dj-database-url~=1.0",
    "django-modeltranslation~=0.18",
    "django-simple-history~=3.1",
    "django-mistune~=0.1",
    "django-hosts~=5.2",
    "gunicorn",
    "huey~=2.4",
    "md-anchors~=0.2",
    "psycopg2-binary",
    "whitenoise~=5.2",
    # Needed because some old dependancies use pkg_resources
    "setuptools>=68.2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "json-schema-for-humans",
    "ruff",
]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
remove = ["--no-self"]

[tool.ruff]
extend-exclude = [
    "*/migrations/*.*",
    ".venv/*.*",
]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "C4", "DJ", "INP", "PIE", "PYI",
    "RSE", "RET", "SLOT", "SIM", "TID", "INT", "PTH", "PERF", "RUF"
]
ignore = [
    "DJ003",  # TODO: Remove this!
    "DJ012",
    "PERF203",
    "RUF012",
]
line-length = 79

[tool.ruff.per-file-ignores]
"mixtures/settings.py" = ["E501"]
"mixtures/settings_deploy.py"= ["F403", "F405"]
"drugcombinator/urls.py"= ["E501"]
"tests.py" = ["N802"]

[tool.ruff.isort]
lines-after-imports = 2
split-on-trailing-comma = false
